--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,23 +12,12 @@
 
 		}
 		</style>	
+	<link href="public/css/output.css" rel="stylesheet">
 	<link
-      href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-	<script src="https://cdn.tailwindcss.com"></script>
-	<script>
-		tailwind.config = {
-			theme: {
-				extend: {
-					colors: {
-						clifford: '#da373d',
-					}
-				}
-			}
-		}
-	</script>
+		href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
+		rel="stylesheet"
+		type="text/css"
+	/>
 	<title>BruiserWar</title>
 </head>
 <body>
